[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/cards/test.png" type="Texture" id=1]
[ext_resource path="res://scenes_and_scripts/hand_cards.gd" type="Script" id=2]
[ext_resource path="res://scenes_and_scripts/gameplay.gd" type="Script" id=3]

[node name="main" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 150.0, 230.0 ],
"_edit_vertical_guides_": [ 100.0 ]
}

[node name="return_to_hand_area" type="Sprite" parent="."]
modulate = Color( 0.941176, 0.564706, 0.564706, 1 )
position = Vector2( 73, 75 )
scale = Vector2( 7.15, 7.5 )
texture = ExtResource( 1 )

[node name="play_area" type="Sprite" parent="."]
modulate = Color( 0.564706, 0.913725, 0.941176, 1 )
position = Vector2( 72.5, 180 )
scale = Vector2( 7.15, 3 )
texture = ExtResource( 1 )

[node name="hand area" type="Sprite" parent="."]
modulate = Color( 0.686275, 0.980392, 0.623529, 1 )
position = Vector2( 73, 232.25 )
scale = Vector2( 7.15, 2.225 )
texture = ExtResource( 1 )

[node name="discard_pile" type="Sprite" parent="."]
modulate = Color( 0.968627, 0.392157, 0.215686, 1 )
position = Vector2( 125, 230 )
scale = Vector2( 0.9, 1 )
texture = ExtResource( 1 )

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.2, 0.2 )

[node name="gameplay" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="end_turn" type="TouchScreenButton" parent="gameplay"]
modulate = Color( 0.658824, 0.690196, 0.52549, 1 )
position = Vector2( 115, 169 )
normal = ExtResource( 1 )

[node name="hand_cards" type="Node2D" parent="gameplay"]
script = ExtResource( 2 )

[connection signal="released" from="gameplay/end_turn" to="gameplay" method="_on_end_turn_released"]
